--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h5>hello Coursera</h5>
+<h1>hello Coursera,It's a great course</h1>
 </body>
 </html>
